--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Cart2Go</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="fullname">Fullname</string>
+    <string name="email">Email</string>
+    <string name="signup">SignUp</string>
+    <string name="loginhere">Already have an account? Login</string>
+    <string name="signuphere">Create new account? Sign Up</string>
+    <string name="welcome">Welcome</string>
+    <string name="progress_detail">Progress</string>
 </resources>
